# MyNotes

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
crates/MyNotes/: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/editor-core/src/: cursor.rs  enums.rs  lib.rs  text.rs
crates/editor-core/src/line_index/: line_iter.rs  line_summary.rs  mod.rs  node.rs  search_cache.rs
crates/editor-core/src/piece_table/: mod.rs  piece.rs  table.rs
crates/editor-state/: Cargo.toml
crates/editor-state/src/: document.rs
crates/gui/: Cargo.toml
crates/io/: Cargo.toml
crates/io/src/: mmap.rs
crates/layout/: Cargo.toml
crates/mynotes/: Cargo.toml
crates/mynotes/icons/: icon.icns
crates/mynotes_core/: Cargo.toml
crates/mynotes_core/benches/: line_tracker.rs  piece_table.rs
crates/mynotes_core/src/: btree.rs  cursor.rs  document.rs  history.rs  lib.rs  line_ending.rs  line_tracker.rs  piece_table.rs  text_buffer.rs
crates/mynotes_core/tests/: line_tracker_tests.rs  memory_bench.rs  piece_table_tests.rs
crates/mynotes_gui/: Cargo.toml
crates/mynotes_io/: Cargo.toml
crates/mynotes_io/src/: lib.rs  mmap.rs  swap_manager.rs
crates/mynotes_utils/: Cargo.toml
crates/renderer/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/util/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/benches/: line_ending_bench.rs
crates/utils/src/: lib.rs  line_ending.rs  types.rs
crates/utils/src/data_structures/: mod.rs  object_pool.rs
crates/utils/src/data_structures/btree/: mod.rs
crates/utils/src/data_structures/btree/measured_btree/: mod.rs  node.rs  traits.rs
crates/utils/src/debug/: mod.rs  visualize.rs
legacy/mynotes_core/src/: enums.rs  lib.rs  text_buffer.rs  visualizer.rs
legacy/mynotes_core/tests/: line_ending_tests.rs  memory_bench.rs  text_buffer_tests.rs
legacy/mynotes_io/: Cargo.toml
legacy/mynotes_io/src/: enums.rs  mmap.rs  save.rs
