[package]
name = "app"
version.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[package.metadata.packager]
identifier = "com.mynotes.app"
product-name = "MyNotes"
formats = ["all"]
out-dir = "../../target/release/installers"

[dependencies]
editor-core = { path = "../editor-core" }
editor-state = { path = "../editor-state" }
ui = { path = "../ui" }
fltk = { workspace = true }