[package]
name = "mynotes_core"
version.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
publish.workspace = true

[[bench]]
name = "piece_table"
harness = false

[[bench]]
name = "line_tracker"
harness = false

[[test]]
name = "memory_bench"
harness = false

[profile.release]
debug = 1

[features]
dhat-heap = []
dhat-ad-hoc = []

[dependencies]
mynotes_io = { path = "../mynotes_io" }
thiserror = { workspace = true }
memchr = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
dhat = { workspace = true }
